<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:paddingTop="60dp"
        android:paddingBottom="24dp">

        <!-- Hello -->
        <TextView
            android:id="@+id/tv_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login_hello"
            android:textColor="?attr/colorOnSurface"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:viewBindingIgnore="true" />
        <!-- Welcome Back -->
        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_welcome"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/tv_hello"
            app:layout_constraintTop_toBottomOf="@id/tv_hello"
            tools:viewBindingIgnore="true" />
        <!-- UserName -->
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_user_name_label"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_welcome"
            tools:viewBindingIgnore="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_user_name"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_standard"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_standard"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_standard"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_standard"
            app:boxStrokeColor="?attr/colorOutline"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/login_user_name_hint"
                android:inputType="textNoSuggestions"
                android:textSize="11sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login_password_label"
            android:textColor="?attr/colorOnSurface"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_user_name"
            tools:viewBindingIgnore="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_standard"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_standard"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_standard"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_standard"
            app:boxStrokeColor="?attr/colorOutline"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:textSize="11sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_regular"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/login_forgot_password"
            android:textColor="?attr/colorSecondary"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password" />

        <!-- Sign In Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/login_btn"
            android:textSize="16sp"
            app:cornerRadius="@dimen/corner_radius_standard"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconPadding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

        <!--Circular Progress Indicator-->
        <ProgressBar
            android:id="@+id/pc_loading"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:elevation="10dp"
            android:indeterminateTint="@color/primary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="@id/btn_sign_in"
            app:layout_constraintStart_toStartOf="@id/btn_sign_in"
            app:layout_constraintTop_toTopOf="@id/btn_sign_in" />

        <!-- Divider -->
        <View
            android:id="@+id/view_left_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_4"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toStartOf="@id/tv_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_or_text"
            android:textColor="@color/gray_4"
            app:layout_constraintEnd_toStartOf="@id/view_right_divider"
            app:layout_constraintStart_toEndOf="@id/view_left_divider"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
            tools:viewBindingIgnore="true" />

        <View
            android:id="@+id/view_right_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:background="@color/gray_4"
            app:layout_constraintBottom_toBottomOf="@id/tv_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_or"
            app:layout_constraintTop_toTopOf="@id/tv_or" />

        <!-- Social Login -->

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ripple_social_button"
            android:contentDescription="@string/login_google_desc"
            android:elevation="4dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_google"
            app:layout_constraintEnd_toStartOf="@id/btn_facebook"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_or" />

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/ripple_social_button"
            android:contentDescription="@string/login_facebook_desc"
            android:elevation="4dp"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="@id/btn_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_google"
            app:layout_constraintTop_toTopOf="@id/btn_google" />

        <!-- Bottom Text -->

        <TextView
            android:id="@+id/tv_no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login_dont_have_account"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toStartOf="@id/tv_signup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_google"
            tools:viewBindingIgnore="true" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/poppins_medium"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/login_signup"
            android:textColor="?attr/colorSecondary"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_no_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>